--- a/resources/assets/sass/partials/_ships.scss
+++ b/resources/assets/sass/partials/_ships.scss
@@ -67,7 +67,7 @@ table {
   width: 100%;
   td{
     line-height: 4rem;
-    width: 33%;
+    white-space: nowrap;
     span {
       color: #ffffff;
       padding: 0 2 rem;
